<resources>
    <string name="app_name">LLM-Profiler</string>
    <string name="engine">select engine</string>
    <string name="model">select model</string>
    <string name="backend">select backend</string>
    <string name="prefill_power">prefill power</string>
    <string name="decode_power">decode power</string>
    <string name="test">select test mode</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>
</resources>